Fix non-1:1 images being stretched

--- a/src/app/scoreboard/scoreboard.component.scss
+++ b/src/app/scoreboard/scoreboard.component.scss
@@ -5,7 +5,7 @@
 .team-icon {
   position: relative;
   width: 38.34px;
-  height: 38.34px;
+  max-height: 38.34px;
 }
 
 .scoreboard-container {
