--- a/src/app/topscore/topscore.component.scss
+++ b/src/app/topscore/topscore.component.scss
@@ -123,7 +123,7 @@
 .team-image {
     position: relative;
     width: 38.34px;
-    height: 38.34px;
+    max-height: 38.34px;
 }
 
 .round-number {
